# terimg

./: .gitignore  CMakeLists.txt  Makefile  README.md  control  converter.cpp  main.cpp
.github/workflows/: build_linux.yml
include/: converter.hpp
